--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <ol>
 	<li>Термин &ldquo;личная информация&rdquo;, используемый в настоящем документе, определяется как любая информация, которая идентифицирует или может использоваться для идентификации, связи или поиска человека, к которому такая информация относится. Личная информация, которую мы собираем, будет являться предметом настоящей политики конфиденциальности, с вносимыми время от времени поправками.</li>
 	<li>В данном приложение запрашивается адрес электронной почты для проверки покупок из Google Play, мы не запрашиваем Ваш  телефон или какую нибудь другую информацию о Вас.</li>
-	<li>&nbsp;Мы продаем контент, такой как внутриигровая валюта, а также премиум доступ для отключения рекламы.</li>
+	<li>Мы продаем контент, такой как внутриигровая валюта, а также премиум доступ для отключения рекламы.</li>
 	<li>Мы не требуем регистрации.</li>
 	<li>Безопасность Вашей персональной информации не будет нарушена.</li>
 	<li>Мы не просим информацию о местоположении через наше мобильное приложение.</li>
