--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <h2>Политика конфиденциальности</h2>
 <ol>
 	<li>Термин &ldquo;личная информация&rdquo;, используемый в настоящем документе, определяется как любая информация, которая идентифицирует или может использоваться для идентификации, связи или поиска человека, к которому такая информация относится. Личная информация, которую мы собираем, будет являться предметом настоящей политики конфиденциальности, с вносимыми время от времени поправками.</li>
-	<li>В данном приложение запрашивается адрес электронной почты для проверки покупок из Google Play, мы не запрашиваем Ваш  телефон или какую нибудь другую информацию о Вас.</li>
-	<li>Мы продаем контент, такой как внутриигровая валюта, а также премиум доступ для отключения рекламы.</li>
+	<li>Мы не запрашиваем Ваш телефон, адрес элекстронной почты или какую либо другую информацию о Вас.</li>
+	<li>В нашем приложение нет платного контента.</li>
 	<li>Мы не требуем регистрации.</li>
 	<li>Безопасность Вашей персональной информации не будет нарушена.</li>
-	<li>Мы не просим информацию о местоположении через наше мобильное приложение.</li>
+	<li>Мы запрашиваем информацию о Вашем текщем местоположении через наше мобильное приложение для показа прогноза погоды для текщего местоположения.</li>
 	<li>Мы не отправляем на электронную почту рассылку новостей.</li>
 </ol>
 <h2>Требуемые разрешения</h2>
 <ol>
-	<li>Доступ к данным об аккаунте используется для проверки покупок.</li>
+	<li>Доступ к данным о текщем местоположении для показа актульного прогноза погоды.</li>
 </ol>
 <h2>Контакты</h2>
 <div>&nbsp; &nbsp; &nbsp; e-mail: artemurom@gmail.com</div>
